--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 		<meta charset='UTF-8' />
 		<meta http-equiv='X-UA-Compatible' content='IE=edge' />
 		<meta name='viewport' content='width=device-width initial-scale=1.0' />
-		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+		<link rel='icon' type='image/svg+xml' href='./favicon.svg' />
 		<meta name='generator' content={Astro.generator} />
 		<title>{title}</title>
 		<meta name='description' content='Astro description' />
