--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -121,6 +121,7 @@ import '../styles/global.css';
         @keydown.window.escape='imageGalleryClose'
         x-trap.inert.noscroll='imageGalleryOpened'
         class='fixed inset-0 z-[99] flex items-center justify-center bg-black bg-opacity-50 select-none cursor-zoom-out'
+        x-cloak
       >
         <div
           class='relative flex items-center justify-center w-11/12 xl:w-4/5 h-11/12'
