--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,176 +1,176 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from '@/layouts/BaseLayout.astro';
 
-import '../styles/global.css';
+import '@/styles/global.css';
 ---
 
-<BaseLayout title='Image Gallery | Pines UI'>
+<BaseLayout title="Image Gallery | Pines UI">
   <div
-    x-data='imageGallery'
-    @image-gallery-next.window='imageGalleryNext()'
-    @image-gallery-prev.window='imageGalleryPrev()'
-    @keyup.right.window='imageGalleryNext();'
-    @keyup.left.window='imageGalleryPrev();'
+    x-data="imageGallery"
+    @image-gallery-next.window="imageGalleryNext()"
+    @image-gallery-prev.window="imageGalleryPrev()"
+    @keyup.right.window="imageGalleryNext();"
+    @keyup.left.window="imageGalleryPrev();"
     x-init="
       imageGalleryPhotos = $refs.gallery.querySelectorAll('img');
       for(let i=0; i<imageGalleryPhotos.length; i++) {
         imageGalleryPhotos[i].setAttribute('data-index', i+1);
       }
     "
-    class='w-full h-full select-none'
+    class="w-full h-full select-none"
   >
     <div
-      class='max-w-6xl mx-auto duration-1000 delay-300 opacity-0 select-none ease animate-fade-in-view'
-      style='translate: none; rotate: none; scale: none; opacity: 1; transform: translate(0px, 0px);'
+      class="max-w-6xl mx-auto duration-1000 delay-300 opacity-0 select-none ease animate-fade-in-view"
+      style="translate: none; rotate: none; scale: none; opacity: 1; transform: translate(0px, 0px);"
     >
       <ul
-        x-ref='gallery'
-        id='gallery'
-        class='grid grid-cols-2 gap-5 lg:grid-cols-5'
+        x-ref="gallery"
+        id="gallery"
+        class="grid grid-cols-2 gap-5 lg:grid-cols-5"
       >
         <li>
           <img
-            x-on:click='imageGalleryOpen'
-            src='https://cdn.devdojo.com/images/june2023/mountains-01.jpeg'
-            class='object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]'
-            alt='photo gallery image 01'
+            x-on:click="imageGalleryOpen"
+            src="https://cdn.devdojo.com/images/june2023/mountains-01.jpeg"
+            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
+            alt="photo gallery image 01"
           />
         </li>
         <li>
           <img
-            x-on:click='imageGalleryOpen'
-            src='https://cdn.devdojo.com/images/june2023/mountains-02.jpeg'
-            class='object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]'
-            alt='photo gallery image 02'
+            x-on:click="imageGalleryOpen"
+            src="https://cdn.devdojo.com/images/june2023/mountains-02.jpeg"
+            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
+            alt="photo gallery image 02"
           />
         </li>
         <li>
           <img
-            x-on:click='imageGalleryOpen'
-            src='https://cdn.devdojo.com/images/june2023/mountains-03.jpeg'
-            class='object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]'
-            alt='photo gallery image 03'
+            x-on:click="imageGalleryOpen"
+            src="https://cdn.devdojo.com/images/june2023/mountains-03.jpeg"
+            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
+            alt="photo gallery image 03"
           />
         </li>
         <li>
           <img
-            x-on:click='imageGalleryOpen'
-            src='https://cdn.devdojo.com/images/june2023/mountains-04.jpeg'
-            class='object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]'
-            alt='photo gallery image 04'
+            x-on:click="imageGalleryOpen"
+            src="https://cdn.devdojo.com/images/june2023/mountains-04.jpeg"
+            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
+            alt="photo gallery image 04"
           />
         </li>
         <li>
           <img
-            x-on:click='imageGalleryOpen'
-            src='https://cdn.devdojo.com/images/june2023/mountains-05.jpeg'
-            class='object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]'
-            alt='photo gallery image 05'
+            x-on:click="imageGalleryOpen"
+            src="https://cdn.devdojo.com/images/june2023/mountains-05.jpeg"
+            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
+            alt="photo gallery image 05"
           />
         </li>
         <li>
           <img
-            x-on:click='imageGalleryOpen'
-            src='https://cdn.devdojo.com/images/june2023/mountains-06.jpeg'
-            class='object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]'
-            alt='photo gallery image 06'
+            x-on:click="imageGalleryOpen"
+            src="https://cdn.devdojo.com/images/june2023/mountains-06.jpeg"
+            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
+            alt="photo gallery image 06"
           />
         </li>
         <li>
           <img
-            x-on:click='imageGalleryOpen'
-            src='https://cdn.devdojo.com/images/june2023/mountains-07.jpeg'
-            class='object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]'
-            alt='photo gallery image 07'
+            x-on:click="imageGalleryOpen"
+            src="https://cdn.devdojo.com/images/june2023/mountains-07.jpeg"
+            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
+            alt="photo gallery image 07"
           />
         </li>
         <li>
           <img
-            x-on:click='imageGalleryOpen'
-            src='https://cdn.devdojo.com/images/june2023/mountains-08.jpeg'
-            class='object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]'
-            alt='photo gallery image 08'
+            x-on:click="imageGalleryOpen"
+            src="https://cdn.devdojo.com/images/june2023/mountains-08.jpeg"
+            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
+            alt="photo gallery image 08"
           />
         </li>
         <li>
           <img
-            x-on:click='imageGalleryOpen'
-            src='https://cdn.devdojo.com/images/june2023/mountains-09.jpeg'
-            class='object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]'
-            alt='photo gallery image 09'
+            x-on:click="imageGalleryOpen"
+            src="https://cdn.devdojo.com/images/june2023/mountains-09.jpeg"
+            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
+            alt="photo gallery image 09"
           />
         </li>
         <li>
           <img
-            x-on:click='imageGalleryOpen'
-            src='https://cdn.devdojo.com/images/june2023/mountains-10.jpeg'
-            class='object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]'
-            alt='photo gallery image 10'
+            x-on:click="imageGalleryOpen"
+            src="https://cdn.devdojo.com/images/june2023/mountains-10.jpeg"
+            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
+            alt="photo gallery image 10"
           />
         </li>
       </ul>
     </div>
-    <template x-teleport='body'>
+    <template x-teleport="body">
       <div
-        x-show='imageGalleryOpened'
-        x-transition:enter='transition ease-in-out duration-300'
-        x-transition:enter-start='opacity-0'
-        x-transition:leave='transition ease-in-in duration-300'
-        x-transition:leave-end='opacity-0'
-        @click='imageGalleryClose'
-        @keydown.window.escape='imageGalleryClose'
-        x-trap.inert.noscroll='imageGalleryOpened'
-        class='fixed inset-0 z-[99] flex items-center justify-center bg-black bg-opacity-50 select-none cursor-zoom-out'
+        x-show="imageGalleryOpened"
+        x-transition:enter="transition ease-in-out duration-300"
+        x-transition:enter-start="opacity-0"
+        x-transition:leave="transition ease-in-in duration-300"
+        x-transition:leave-end="opacity-0"
+        @click="imageGalleryClose"
+        @keydown.window.escape="imageGalleryClose"
+        x-trap.inert.noscroll="imageGalleryOpened"
+        class="fixed inset-0 z-[99] flex items-center justify-center bg-black bg-opacity-50 select-none cursor-zoom-out"
         x-cloak
       >
         <div
-          class='relative flex items-center justify-center w-11/12 xl:w-4/5 h-11/12'
+          class="relative flex items-center justify-center w-11/12 xl:w-4/5 h-11/12"
         >
           <div
             @click="$event.stopPropagation(); $dispatch('image-gallery-prev')"
-            class='absolute left-0 flex items-center justify-center text-white translate-x-10 rounded-full cursor-pointer xl:-translate-x-24 2xl:-translate-x-32 bg-white/10 w-14 h-14 hover:bg-white/20'
+            class="absolute left-0 flex items-center justify-center text-white translate-x-10 rounded-full cursor-pointer xl:-translate-x-24 2xl:-translate-x-32 bg-white/10 w-14 h-14 hover:bg-white/20"
           >
             <svg
-              class='w-6 h-6'
-              xmlns='http://www.w3.org/2000/svg'
-              fill='none'
-              viewBox='0 0 24 24'
-              stroke-width='1.5'
-              stroke='currentColor'
+              class="w-6 h-6"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
             >
               <path
-                stroke-linecap='round'
-                stroke-linejoin='round'
-                d='M15.75 19.5L8.25 12l7.5-7.5'></path>
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.75 19.5L8.25 12l7.5-7.5"></path>
             </svg>
           </div>
           <img
-            x-show='imageGalleryOpened'
-            x-transition:enter='transition ease-in-out duration-300'
-            x-transition:enter-start='opacity-0 transform scale-50'
-            x-transition:leave='transition ease-in-in duration-300'
-            x-transition:leave-end='opacity-0 transform scale-50'
-            class='object-contain object-center w-full h-full select-none cursor-zoom-out'
-            :src='imageGalleryActiveUrl'
-            alt=''
-            style='display: none;'
+            x-show="imageGalleryOpened"
+            x-transition:enter="transition ease-in-out duration-300"
+            x-transition:enter-start="opacity-0 transform scale-50"
+            x-transition:leave="transition ease-in-in duration-300"
+            x-transition:leave-end="opacity-0 transform scale-50"
+            class="object-contain object-center w-full h-full select-none cursor-zoom-out"
+            :src="imageGalleryActiveUrl"
+            alt=""
+            style="display: none;"
           />
           <div
             @click="$event.stopPropagation(); $dispatch('image-gallery-next');"
-            class='absolute right-0 flex items-center justify-center text-white -translate-x-10 rounded-full cursor-pointer xl:translate-x-24 2xl:translate-x-32 bg-white/10 w-14 h-14 hover:bg-white/20'
+            class="absolute right-0 flex items-center justify-center text-white -translate-x-10 rounded-full cursor-pointer xl:translate-x-24 2xl:translate-x-32 bg-white/10 w-14 h-14 hover:bg-white/20"
           >
             <svg
-              class='w-6 h-6'
-              xmlns='http://www.w3.org/2000/svg'
-              fill='none'
-              viewBox='0 0 24 24'
-              stroke-width='1.5'
-              stroke='currentColor'
+              class="w-6 h-6"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
             >
               <path
-                stroke-linecap='round'
-                stroke-linejoin='round'
-                d='M8.25 4.5l7.5 7.5-7.5 7.5'></path>
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M8.25 4.5l7.5 7.5-7.5 7.5"></path>
             </svg>
           </div>
         </div>
