--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import BaseLayout from '@/layouts/BaseLayout.astro';
+import BaseLayout from '@/layouts/BaseLayout.astro'
 
-import '@/styles/global.css';
+import '@/styles/global.css'
 ---
 
 <BaseLayout title="Image Gallery | Pines UI">
@@ -11,16 +11,10 @@ import '@/styles/global.css';
     @image-gallery-prev.window="imageGalleryPrev()"
     @keyup.right.window="imageGalleryNext();"
     @keyup.left.window="imageGalleryPrev();"
-    x-init="
-      imageGalleryPhotos = $refs.gallery.querySelectorAll('img');
-      for(let i=0; i<imageGalleryPhotos.length; i++) {
-        imageGalleryPhotos[i].setAttribute('data-index', i+1);
-      }
-    "
-    class="w-full h-full select-none"
+    class="h-full w-full select-none"
   >
     <div
-      class="max-w-6xl mx-auto duration-1000 delay-300 opacity-0 select-none ease animate-fade-in-view"
+      class="ease animate-fade-in-view mx-auto max-w-6xl select-none opacity-0 delay-300 duration-1000"
       style="translate: none; rotate: none; scale: none; opacity: 1; transform: translate(0px, 0px);"
     >
       <ul
@@ -28,86 +22,17 @@ import '@/styles/global.css';
         id="gallery"
         class="grid grid-cols-2 gap-5 lg:grid-cols-5"
       >
-        <li>
-          <img
-            x-on:click="imageGalleryOpen"
-            src="https://cdn.devdojo.com/images/june2023/mountains-01.jpeg"
-            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
-            alt="photo gallery image 01"
-          />
-        </li>
-        <li>
-          <img
-            x-on:click="imageGalleryOpen"
-            src="https://cdn.devdojo.com/images/june2023/mountains-02.jpeg"
-            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
-            alt="photo gallery image 02"
-          />
-        </li>
-        <li>
-          <img
-            x-on:click="imageGalleryOpen"
-            src="https://cdn.devdojo.com/images/june2023/mountains-03.jpeg"
-            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
-            alt="photo gallery image 03"
-          />
-        </li>
-        <li>
-          <img
-            x-on:click="imageGalleryOpen"
-            src="https://cdn.devdojo.com/images/june2023/mountains-04.jpeg"
-            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
-            alt="photo gallery image 04"
-          />
-        </li>
-        <li>
-          <img
-            x-on:click="imageGalleryOpen"
-            src="https://cdn.devdojo.com/images/june2023/mountains-05.jpeg"
-            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
-            alt="photo gallery image 05"
-          />
-        </li>
-        <li>
-          <img
-            x-on:click="imageGalleryOpen"
-            src="https://cdn.devdojo.com/images/june2023/mountains-06.jpeg"
-            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
-            alt="photo gallery image 06"
-          />
-        </li>
-        <li>
-          <img
-            x-on:click="imageGalleryOpen"
-            src="https://cdn.devdojo.com/images/june2023/mountains-07.jpeg"
-            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
-            alt="photo gallery image 07"
-          />
-        </li>
-        <li>
-          <img
-            x-on:click="imageGalleryOpen"
-            src="https://cdn.devdojo.com/images/june2023/mountains-08.jpeg"
-            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
-            alt="photo gallery image 08"
-          />
-        </li>
-        <li>
-          <img
-            x-on:click="imageGalleryOpen"
-            src="https://cdn.devdojo.com/images/june2023/mountains-09.jpeg"
-            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
-            alt="photo gallery image 09"
-          />
-        </li>
-        <li>
-          <img
-            x-on:click="imageGalleryOpen"
-            src="https://cdn.devdojo.com/images/june2023/mountains-10.jpeg"
-            class="object-cover select-none w-full h-auto bg-gray-200 rounded cursor-zoom-in aspect-[5/6] lg:aspect-[2/3] xl:aspect-[3/4]"
-            alt="photo gallery image 10"
-          />
-        </li>
+        <template x-for="(image, index) in imageGallery">
+          <li>
+            <img
+              x-on:click="imageGalleryOpen"
+              :src="image.photo"
+              :alt="image.alt"
+              :data-index="index+1"
+              class="aspect-[5/6] h-auto w-full cursor-zoom-in select-none rounded bg-gray-200 object-cover lg:aspect-[2/3] xl:aspect-[3/4]"
+            />
+          </li>
+        </template>
       </ul>
     </div>
     <template x-teleport="body">
@@ -120,29 +45,28 @@ import '@/styles/global.css';
         @click="imageGalleryClose"
         @keydown.window.escape="imageGalleryClose"
         x-trap.inert.noscroll="imageGalleryOpened"
-        class="fixed inset-0 z-[99] flex items-center justify-center bg-black bg-opacity-50 select-none cursor-zoom-out"
+        class="fixed inset-0 z-[99] flex cursor-zoom-out select-none items-center justify-center bg-black bg-opacity-50"
         x-cloak
       >
         <div
-          class="relative flex items-center justify-center w-11/12 xl:w-4/5 h-11/12"
+          class="h-11/12 relative flex w-11/12 items-center justify-center xl:w-4/5"
         >
           <div
             @click="$event.stopPropagation(); $dispatch('image-gallery-prev')"
-            class="absolute left-0 flex items-center justify-center text-white translate-x-10 rounded-full cursor-pointer xl:-translate-x-24 2xl:-translate-x-32 bg-white/10 w-14 h-14 hover:bg-white/20"
+            class="absolute left-0 flex h-14 w-14 translate-x-10 cursor-pointer items-center justify-center rounded-full bg-white/10 text-white hover:bg-white/20 xl:-translate-x-24 2xl:-translate-x-32"
           >
             <svg
-              class="w-6 h-6"
+              class="h-6 w-6"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-            >
-              <path
+              ><path
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                d="M15.75 19.5L8.25 12l7.5-7.5"></path>
-            </svg>
+                d="M15.75 19.5L8.25 12l7.5-7.5"></path></svg
+            >
           </div>
           <img
             x-show="imageGalleryOpened"
@@ -150,28 +74,27 @@ import '@/styles/global.css';
             x-transition:enter-start="opacity-0 transform scale-50"
             x-transition:leave="transition ease-in-in duration-300"
             x-transition:leave-end="opacity-0 transform scale-50"
-            class="object-contain object-center w-full h-full select-none cursor-zoom-out"
+            class="h-full w-full cursor-zoom-out select-none object-contain object-center"
             :src="imageGalleryActiveUrl"
             alt=""
             style="display: none;"
           />
           <div
             @click="$event.stopPropagation(); $dispatch('image-gallery-next');"
-            class="absolute right-0 flex items-center justify-center text-white -translate-x-10 rounded-full cursor-pointer xl:translate-x-24 2xl:translate-x-32 bg-white/10 w-14 h-14 hover:bg-white/20"
+            class="absolute right-0 flex h-14 w-14 -translate-x-10 cursor-pointer items-center justify-center rounded-full bg-white/10 text-white hover:bg-white/20 xl:translate-x-24 2xl:translate-x-32"
           >
             <svg
-              class="w-6 h-6"
+              class="h-6 w-6"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-            >
-              <path
+              ><path
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                d="M8.25 4.5l7.5 7.5-7.5 7.5"></path>
-            </svg>
+                d="M8.25 4.5l7.5 7.5-7.5 7.5"></path></svg
+            >
           </div>
         </div>
       </div>
@@ -185,40 +108,75 @@ import '@/styles/global.css';
       imageGalleryOpened: false,
       imageGalleryActiveUrl: null,
       imageGalleryImageIndex: null,
+      imageGallery: [
+        {
+          photo: 'https://cdn.devdojo.com/images/june2023/mountains-01.jpeg',
+          alt: 'Photo of Mountains',
+        },
+        {
+          photo: 'https://cdn.devdojo.com/images/june2023/mountains-02.jpeg',
+          alt: 'Photo of Mountains 02',
+        },
+        {
+          photo: 'https://cdn.devdojo.com/images/june2023/mountains-03.jpeg',
+          alt: 'Photo of Mountains 03',
+        },
+        {
+          photo: 'https://cdn.devdojo.com/images/june2023/mountains-04.jpeg',
+          alt: 'Photo of Mountains 04',
+        },
+        {
+          photo: 'https://cdn.devdojo.com/images/june2023/mountains-05.jpeg',
+          alt: 'Photo of Mountains 05',
+        },
+        {
+          photo: 'https://cdn.devdojo.com/images/june2023/mountains-06.jpeg',
+          alt: 'Photo of Mountains 06',
+        },
+        {
+          photo: 'https://cdn.devdojo.com/images/june2023/mountains-07.jpeg',
+          alt: 'Photo of Mountains 07',
+        },
+        {
+          photo: 'https://cdn.devdojo.com/images/june2023/mountains-08.jpeg',
+          alt: 'Photo of Mountains 08',
+        },
+        {
+          photo: 'https://cdn.devdojo.com/images/june2023/mountains-09.jpeg',
+          alt: 'Photo of Mountains 09',
+        },
+        {
+          photo: 'https://cdn.devdojo.com/images/june2023/mountains-10.jpeg',
+          alt: 'Photo of Mountains 10',
+        },
+      ],
       imageGalleryOpen(event) {
-        this.imageGalleryImageIndex = event.target.dataset.index;
-        this.imageGalleryActiveUrl = event.target.src;
-        this.imageGalleryOpened = true;
+        this.imageGalleryImageIndex = event.target.dataset.index
+        this.imageGalleryActiveUrl = event.target.src
+        this.imageGalleryOpened = true
       },
       imageGalleryClose() {
-        this.imageGalleryOpened = false;
-        setTimeout(() => (this.imageGalleryActiveUrl = null), 300);
+        this.imageGalleryOpened = false
+        setTimeout(() => (this.imageGalleryActiveUrl = null), 300)
       },
       imageGalleryNext() {
-        if (
-          this.imageGalleryImageIndex == this.$refs.gallery.childElementCount
-        ) {
-          this.imageGalleryImageIndex = 1;
-        } else {
-          this.imageGalleryImageIndex =
-            parseInt(this.imageGalleryImageIndex) + 1;
-        }
+        this.imageGalleryImageIndex =
+          this.imageGalleryImageIndex == this.imageGallery.length
+            ? 1
+            : parseInt(this.imageGalleryImageIndex) + 1
         this.imageGalleryActiveUrl = this.$refs.gallery.querySelector(
-          "[data-index='" + this.imageGalleryImageIndex + "']"
-        ).src;
+          "[data-index='" + this.imageGalleryImageIndex + "']",
+        ).src
       },
       imageGalleryPrev() {
-        if (this.imageGalleryImageIndex == 1) {
-          this.imageGalleryImageIndex = this.$refs.gallery.childElementCount;
-        } else {
-          this.imageGalleryImageIndex =
-            parseInt(this.imageGalleryImageIndex) - 1;
-        }
-
+        this.imageGalleryImageIndex =
+          this.imageGalleryImageIndex == 1
+            ? this.imageGallery.length
+            : parseInt(this.imageGalleryImageIndex) - 1
         this.imageGalleryActiveUrl = this.$refs.gallery.querySelector(
-          "[data-index='" + this.imageGalleryImageIndex + "']"
-        ).src;
+          "[data-index='" + this.imageGalleryImageIndex + "']",
+        ).src
       },
-    }));
-  });
+    }))
+  })
 </script>
