--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import BaseLayout from '@/layouts/BaseLayout.astro'
-
-import '@/styles/global.css'
 ---
 
-<BaseLayout title="Image Gallery | Pines UI">
+<BaseLayout
+  title="Image Gallery | Pines UI"
+  description="Astro Everest is an image gallery built with Alpine.js and TailwindCSS."
+>
   <div
     x-data="imageGallery"
     @image-gallery-next.window="imageGalleryNext()"
