--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,6 +6,8 @@ export interface Props {
   description: string | undefined
 }
 
+const canonicalURL = new URL(Astro.url.pathname, Astro.site)
+
 const { title, description } = Astro.props
 ---
 
@@ -16,21 +18,21 @@ const { title, description } = Astro.props
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="canonical" href={Astro.site} />
-    <link rel="icon" type="image/svg+xml" href=`${Astro.site}favicon.svg` />
+    <link rel="canonical" href={canonicalURL} />
+    <link rel="icon" type="image/svg+xml" href=`${canonicalURL}favicon.svg` />
     <title>{title}</title>
     <meta name="description" content={description} />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content={Astro.site} />
+    <meta property="og:url" content={canonicalURL} />
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
-    <meta property="og:image" content=`${Astro.site}og-image.svg` />
+    <meta property="og:image" content=`${canonicalURL}og-image.svg` />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content={Astro.site} />
+    <meta property="twitter:url" content={canonicalURL} />
     <meta property="twitter:title" content={title} />
     <meta property="twitter:description" content={description} />
-    <meta property="twitter:image" content=`${Astro.site}og-image.svg` />
+    <meta property="twitter:image" content=`${canonicalURL}og-image.svg` />
 
     <style>
       [x-cloak] {
