--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import BaseLayout from '@/layouts/BaseLayout.astro'
 
 <BaseLayout
   title="Image Gallery | Pines UI"
-  description="Astro Everest is an image gallery built with Alpine.js and Tailwind CSS."
+  description="Astro Everest is an image gallery built with Astro, Alpine.js and Tailwind CSS."
 >
   <div
     x-data="imageGallery"
